--- a/index.html
+++ b/index.html
@@ -50,9 +50,14 @@
         </section>	
     <!--banner-->
     <section class="main-content">
-
+		
 
     </section>
+    
+     <footer class="site-footer" style="margin-bottom:100px">
+
+        <span class="site-footer-credits">This software is designed by <a href="http://aleen42.github.io">Aleen</a>.</span>
+      </footer>
   </body>
 </html>
 
