--- a/index.html
+++ b/index.html
@@ -49,15 +49,14 @@
             </ul>
         </section>	
     <!--banner-->
-    <section class="main-content">
-		
+    <section class="main-content" style="margin-bottom:400px;">
+		<p>This software is designed by <a href="http://aleen42.github.io"><b style="font-size:40px;">Aleen</b></a>.</p>
+		<h3><b>1. How does it work?</b></h3>
+		<p>Simply, it contains two components which all Chats should have. One is the <b>Server</b>, and the other is the <b>Client</b>.</p>
+		<b style="font-size:30px;">1.1 The Server</b>
 
+<h3>
     </section>
-    
-     <footer class="site-footer" style="margin-bottom:100px">
-
-        <span class="site-footer-credits">This software is designed by <a href="http://aleen42.github.io">Aleen</a>.</span>
-      </footer>
   </body>
 </html>
 
