--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </ul>
         </section>	
     <!--banner-->
-    <section class="main-content" style="margin-bottom:400px;">
+    <section class="main-content">
 		<p>This software is designed by <a href="http://aleen42.github.io"><b style="font-size:40px;">Aleen</b></a>.</p>
 		<h3><b>1. How does it work?</b></h3>
 		<p style="text-indent:2em;">Simply, it contains two components which all Chats should have. One is the <b style="color:#a10000;font-size:24px;">Server</b>, and the other is the <b style="color:#a10000;font-size:24px;">Client</b>.</p>
@@ -109,6 +109,9 @@
         
 <h3>
     </section>
+    <div class="tail">
+    	<img src="Preview/tail.gif" alt="Aleen" >
+    </div>
   </body>
 </html>
 
