--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         
         <b style="font-size:30px;">1.2 The Client</b>
         <p style="text-indent:2em;">For the <b style="color:#a10000;font-size:24px;"> Client</b>, first you must login. I just use <b style="color:#a10000;font-size:24px;"> user_name</b> and <b style="color:#a10000;font-size:24px;"> ip_address</b> to authorize a user.</p>
-        <img src="Preview/Login.gif" alt="Aleen" >
+        <img src="Preview/login.gif" alt="Aleen" >
         <p style="text-indent:2em;">First, the Client will get your input User_name and IP. After connecting to the <b style="color:#a10000;font-size:24px;"> SQLServer(DB)</b>, it will check whether the user with this ip is existed and offline. If non-existed, it will enable you to sign up, and if it's existed but online, it will mention you that the user is already online.</p>
         <p style="text-indent:2em;">Message Handling is familiar with the Server. 4 Labels: <b style="color:#a10000;font-size:24px;">CLOSE</b>, <b style="color:#a10000;font-size:24px;">MESSAGE</b>, <b style="color:#a10000;font-size:24px;">ADD</b> and <b style="color:#a10000;font-size:24px;">DELETE</b> are designed.</p>
         
