--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     </script>
   </head>
   <body>
+  	<div class="c">
     <section class="page-header">
     	<!--<h1 class="project-name">Simpchat</h1>
       	<h2 class="project-tagline">A simple tool used for chatting.</h2>-->
@@ -253,11 +254,11 @@ addMouseMotionListener(new MouseMotionAdapter()
         <p style="text-indent:2em;">To be frank, it's not easier to design delicate desktop software with <b style="color:#a10000;font-size:24px;">Java</b> than with <b style="color:#a10000;font-size:24px;">C#</b> + <b style="color:#a10000;font-size:24px;">XAML</b>. However, <b style="color:#a10000;font-size:24px;">SwingC</b>, an open resource, can help you to design different components.</p>
         <h3 style="margin-left:-50px;"><b>3. Summary</b></h3>
         <p style="text-indent:2em;"><b style="color:#a10000;font-size:30px;">SimpChat</b> is just a software, designed to learn how <b style="color:#a10000;font-size:24px;">Socket</b> works. If there are any problems which you would like to communicate with me, Just send me a email: <a href="mailto:408503598@qq.com"><b style="font-size:24px;">408503598@qq.com</b></a>. I am waiting for your voice.</p>
-<h3>
     </section>
     <div class="tail">
     	<img src="Preview/tail.gif" alt="Aleen" >
     </div>
+  </div>
   </body>
 </html>
 
