--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ addMouseMotionListener(new MouseMotionAdapter()
         <p style="text-indent:2em;">To be frank, it's not easier to design delicate desktop software with <b style="color:#a10000;font-size:24px;">Java</b> than with <b style="color:#a10000;font-size:24px;">C#</b> + <b style="color:#a10000;font-size:24px;">XAML</b>. However, <b style="color:#a10000;font-size:24px;">SwingC</b>, an open resource, can help you to design different components.</p>
         <h3 style="margin-left:-50px;"><b>3. Summary</b></h3>
         <p style="text-indent:2em;"><b style="color:#a10000;font-size:30px;">SimpChat</b> is just a software, designed to learn how <b style="color:#a10000;font-size:24px;">Socket</b> works. If there are any problems which you would like to communicate with me, Just send me a email: <a href="mailto:408503598@qq.com"><b style="font-size:24px;">408503598@qq.com</b></a>. I am waiting for your voice.</p>
-        <footer class="site-footer" style="margin-bottom:100px">
+        <footer class="site-footer">
         <p style="text-align:center;">Copyright © <b style="font-size:24px;color:#a10000">Aleen, PuiMan Cheui</b> 2015. All rights reserved.</p>
     	</footer>
     </section>
