--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                                 <a href="https://aleen42.github.io"><button style="margin-right:20px">Home</button></a>
                                 <a href="https://aleen42.github.io/resume.html"><button style="margin-right:20px">Resume</button></a>
                                 <font style="margin-right:20px; color:#000; cursor:default">SimpChat</font>
+                                <a href="http://aleen42.github.io/SimpTyper/"><button style="margin-right:20px">SimpTyper</button></a>
                             </div>
                         </h2><button class="action" data-dialog-close style="margin-top:20px;">Close</button>
 					</div>
