--- a/index.html
+++ b/index.html
@@ -279,9 +279,8 @@ addMouseMotionListener(new MouseMotionAdapter()
         <h3 style="margin-left:-50px;"><b>3. Summary</b></h3>
         <p style="text-indent:2em;"><b style="color:#a10000;font-size:30px;">SimpChat</b> is just a software, designed to learn how <b style="color:#a10000;font-size:24px;">Socket</b> works. If there are any problems which you would like to communicate with me, Just send me a email: <a href="mailto:408503598@qq.com"><b style="font-size:24px;">408503598@qq.com</b></a>. I am waiting for your voice.</p>
         <footer class="site-footer">
-        
         <!-- GoStats JavaScript Based Code -->
-		<p style="text-align:center;font-size:15px;color:#a10000;">PV: <img alt="流量" src="http://c4.gostats.cn/bin/count/a_401947/t_7/i_47/z_0/show_hits/counter.png" style="border-width:0;" />&nbsp;&nbsp;&nbsp;&nbsp;UV: <img alt="訪客量" src="http://c4.gostats.cn/bin/count/a_401947/t_7/i_47/z_0/show_visitors/counter.png" style="border-width:0;" />&nbsp;&nbsp;&nbsp;&nbsp;IP: <img alt="IP量" src="http://c4.gostats.cn/bin/count/a_401947/t_7/i_47/z_0/show_hosts/counter.png" style="border-width:0;" /></p>
+		<p style="text-align:center;font-size:15px;color:#a10000;">PV: <img title="Page views" src="http://c4.gostats.cn/bin/count/a_401947/t_7/i_47/z_0/show_hits/counter.png" style="border-width:0;" />&nbsp;&nbsp;&nbsp;&nbsp;UV: <img title="User views" src="http://c4.gostats.cn/bin/count/a_401947/t_7/i_47/z_0/show_visitors/counter.png" style="border-width:0;" />&nbsp;&nbsp;&nbsp;&nbsp;IP: <img title="IPs" src="http://c4.gostats.cn/bin/count/a_401947/t_7/i_47/z_0/show_hosts/counter.png" style="border-width:0;" /></p>
 		<!-- End GoStats JavaScript Based Code -->
         <p style="text-align:center;">Copyright © <b style="font-size:24px;color:#a10000">Aleen, PuiMan Cheui</b> 2015. All rights reserved.</p>
     	</footer>
