--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                         	<div class="Navigation_Bar_List">
                                 <a href="https://aleen42.github.io"><button style="margin-right:20px">Home</button></a>
                                 <a href="https://aleen42.github.io/resume.html"><button style="margin-right:20px">Resume</button></a>
-                                <a href="http://aleen42.lofter.com/" target="_blank"><button style="margin-right:20px">Blog</button></a>
+                                <a href="http://aleen42.lofter.com/"><button style="margin-right:20px">Blog</button></a>
                                 <font style="margin-right:20px; color:#000; cursor:default">SimpChat</font>
-                                <a href="http://aleen42.github.io/SimpTyper/" target="_blank"><button style="margin-right:20px">SimpTyper</button></a>
+                                <a href="http://aleen42.github.io/SimpTyper/"><button style="margin-right:20px">SimpTyper</button></a>
                             </div>
                         </h2><button class="action" data-dialog-close style="margin-top:20px;">Close</button>
 					</div>
